%% ATC Simulator — UML Class Diagram
%% Render with: https://mermaid.live  or  mmdc -i class_diagram.mmd -o class_diagram.svg

classDiagram
    direction TB

    class Aircraft {
        -string id
        -int x
        -int y
        -int speed
        -string direction
        +Aircraft(id, x, y, speed, direction)
        +move() void
        +getId() string
        +getPosition() pair~int,int~
        +getX() int
        +getY() int
        +getSpeed() int
        +getDirection() string
        +changeDirection(newDir) void
        +setX(x) void
        +setY(y) void
        +setSpeed(speed) void
        +printInfo() void
    }

    class WeatherZone {
        <<struct>>
        +string name
        +int x
        +int y
        +int width
        +int height
        +contains(px, py) bool
    }

    class Airspace {
        -int width
        -int height
        -vector~Aircraft~ aircraftList
        -vector~WeatherZone~ weatherZones
        -reverseDirection(dir)$ string
        +Airspace(width, height)
        +addAircraft(aircraft) void
        +removeAircraft(id) bool
        +updateAircraftPositions() void
        +isInBounds(x, y) bool
        +addWeatherZone(zone) void
        +getWeatherZones() const vector~WeatherZone~
        +isInWeatherZone(x, y) bool
        +getAircraftList() const vector~Aircraft~
        +getAircraftListMutable() vector~Aircraft~
        +getWidth() int
        +getHeight() int
        +getAircraftCount() int
    }

    class Radar {
        +displayAirspace(airspace, dangerIds) void
        +printGrid(airspace, dangerIds) void
    }

    class Controller {
        -double minSafeDistance
        -int totalAvoidances
        -computeDistance(a, b) double
        -raiseWarning(a, b, dist) void
        -turnRight90(dir)$ string
        +Controller(minSafeDistance)
        +checkCollisions(airspace) int
        +resolveCollisions(airspace) int
        +getMinSafeDistance() double
        +setMinSafeDistance(d) void
        +getTotalAvoidances() int
    }

    class SimulationEngine {
        -Airspace airspace
        -Radar radar
        -Controller controller
        -int maxSteps
        -int currentStep
        +SimulationEngine(w, h, steps, safeDist)
        +SimulationEngine(airspace, radar, controller, steps)
        +addAircraft(aircraft) void
        +run() void
        +step() void
        +printBanner() void
        +printSummary() void
    }

    SimulationEngine *-- Airspace : owns
    SimulationEngine *-- Radar : owns
    SimulationEngine *-- Controller : owns
    Airspace *-- "0..*" Aircraft : manages
    Airspace *-- "0..*" WeatherZone : enforces
    Radar ..> Airspace : reads
    Controller ..> Airspace : inspects
    Controller ..> Aircraft : computes distance
